--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 font-face {
-    font-family: 'rawline';
+    font-family: 'Pyidaungsu';
 	src:url('https://raw.githubusercontent.com/MMFCM/myfont/blob/master/Pyidaungsu-Bold.eot')format('eot');
         src: url('https://raw.githubusercontent.com/MMFCM/myfont/blob/master/Pyidaungsu.eot?#iefix') format('embedded-opentype'),
          url('https://raw.githubusercontent.com/MMFCM/myfont/blob/master/Pyidaungsu-Bold.svg') format('svg'),
